Bug 1443803 - Protect against destroyed MediaStream in MediaEngineWebRTCMicrophoneSource. r=padenot

MozReview-Commit-ID: 3vyzS0DceKI